# brave-search-mcp

./: README.md  pyproject.toml
src/brave_search_mcp/: brave.py  codes.py  server.py
src/utils/: config.py
