[project]
name = "brave-search-mcp"
version = "0.1.0"
description = "MCP server that allows to search web using Brave API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "jsonschema>=4.23.0",
    "mcp>=1.1.1",
    "python-dotenv>=1.0.1",
]

[[project.authors]]
name = "Aleksey Pridachin"
email = "a.pridachin@semrush.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
#packages = ["src/brave_search_mcp"]

[project.scripts]
brave-search-mcp = "brave_search_mcp:main"
